# Company-Scorer

./: README.rst  pyproject.toml
company_scorer/assets/: Nvidia.html  Nvidia_SENT.html  scores.txt  variables.txt
company_scorer/src/: main.py  proxy.py
