[tool.poetry]
name = "company_scorer"
version = "0.1.0"
description = ""
authors = ["MonkeyDoug <immortalgamerdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
backoff = "^1.11.1"
pandas = "^1.3.3"
undetected-chromedriver = "^3.0.3"
PyVirtualDisplay = "^2.2"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
